@@ -1,3 +1,4 @@
+
 /*
   +------------------------------------------------------------------------+
   | Phalcon Framework                                                      |
@@ -62,7 +63,7 @@
  * if ($image === null) {
  *
  *     // Store the image in the cache
- *     $cache->save($cacheKey, file_put_contents('tmp-dir/some-image.jpg'));
+ *     $cache->save($cacheKey, file_get_contents('tmp-dir/some-image.jpg'));
  * }
  *
  * header('Content-Type: image/jpeg');
