@@ -40,6 +40,16 @@
  * Phalcon\Validation\Validator\Identical
  *
  * Checks if a value is identical to other
+ *
+ *<code>
+ *use Phalcon\Validation\Validator\Identical;
+ *
+ *$validator->add('terms', new Identical(array(
+ *   'accepted' => 'yes',
+ *   'message' => 'Terms and conditions must be accepted'
+ *)));
+ *</code>
+ *
  */
 
 
